tests/ui/clamped_rpm_no_field_construct.stderr
error[E0423]: cannot initialize a tuple struct which contains private fields
  --> tests/ui/clamped_rpm_no_field_construct.rs:19:13
   |
19 |     let _ = ClampedRpm(5000);
   |             ^^^^^^^^^^
   |
note: constructor is not visible here due to private fields
  --> src/control/state.rs
   |
   | pub struct ClampedRpm(u32);
   |                       ^^^ private field
help: you might have meant to use the `new` associated function
   |
19 -     let _ = ClampedRpm(5000);
19 +     let _ = ClampedRpm::new(_, _, _);
   |
